src/test/ui/issues/issue-38857.stderr
error[E0433]: failed to resolve: could not find `imp` in `sys`
  --> $DIR/issue-38857.rs:7:23
   |
LL |     let a = std::sys::imp::process::process_common::StdioPipes { ..panic!() };
   |                       ^^^ could not find `imp` in `sys`

error[E0603]: module `sys` is private
  --> $DIR/issue-38857.rs:7:18
   |
LL |     let a = std::sys::imp::process::process_common::StdioPipes { ..panic!() };
   |                  ^^^ this module is private
   |
note: the module `sys` is defined here
  --> $SRC_DIR/libstd/lib.rs:LL:COL
   |
LL | mod sys;
   | ^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0433, E0603.
For more information about an error, try `rustc --explain E0433`.
